Pokedex/Pokedex/wwwroot/css/main.css
.pokemonListPicture {
  max-width: 150px;
  max-height: 150px;
  width: auto;
  height: auto;
  margin: 5px;
}

#search {
  max-width: 175px;
}

.generatorSection {
  min-width: 125px;
}

.grid-container {
  display: flex;
  flex-wrap: wrap;
  background-color: gray;
  padding: 7.5px 10px;
}

.grid-container > div {
  padding: 2.5px;
  margin: 2.5px;
  background-color: rgba(255, 255, 255, 0.8);
  border: 1px solid black;
  text-align: center;
  font-size: 1rem;
  flex: 1;
  flex-basis: 20%;
}

.grid-container .typing {
  font-size: 0;
}

.grid-container .typing div {
  margin: 0 2.5px 5px;
  width: 45%;
  max-width: 150px;
}

.pokemonName {
  color: black;
}

.pokemonName:hover {
  color: blue;
}

.fixed-nav {
  width: 100%;
  position: fixed;
  z-index: 500;
}

.attemptCounter {
  padding: 0;
  height: 30px;
  width: 30px;
}

hr.dropdown-line {
  margin: .25rem 0;
}

.dropdown-menu {
  min-width: auto;
}

.check-box {
  width: auto;
}

.collapse-button {
  margin: 5px 0;
}

.collapse-button:focus {
  outline: none;
}

.search-bar input, .search-bar .search-button, .search-bar .reset-button {
  list-style: none;
  padding: .25rem 0rem;
  border-radius: 4px;
  line-height: 1rem;
  height: 1.75rem;
  text-align: center;
}

.search-bar .search-button, .search-bar .reset-button {
  width: 75px;
}

.search-bar input, .search-bar .reset-button {
  background-color: #fff;
}

.search-bar input {
  border: 1px solid #dbdbdb;
  color: #404040;
}

.reset-button:hover {
  color: black;
}

.reset-button {
  color: gray;
}

.search-bar {
  height: 30px;
  margin: 15px 0 10px 0;
}

.fixed-nav {
  top: 0;
}

.statData {
  width: 150px;
}

main {
  padding: 0 5px !important;
  margin: 80px 0 40px;
}

.shadowed img {
  -webkit-filter: drop-shadow(2px 2px 2px #222);
          filter: drop-shadow(2px 2px 2px #222); 
}

.table tbody tr:first-of-type * {
  border-top-width: 0px;
  padding-bottom: 10px;
  font-size: 1rem;
}

.pokemonTables {
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
  margin: 0 -1rem 1rem 0;
}

.pokemonTables table {
  width: 100%;
}

.effectivenessChart {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.StrongAgainst {
  margin-right: 1rem;
}

.effectivenessChart table tbody tr:first-of-type td {
  padding-top: 5px;
}

.noRowBorders td {
  border-width: 0;
}

.noRowBorders table tbody tr:first-of-type td {
  border-top-width: 1px;
}

.teamGeneratorTable td {
  border-width: 0;
}

.generationOptionSeparator, .adminOptionSeparator {
  margin: 5px 0;
}

.generationOptionTitle {
  margin-left: 5px;
}

.generatorDropdown {
  margin-top: -15px;
}

.generatorDropdown, .generatorButton {
  height: 50px;
}

.generatorOptionTitle, .adminMenuTitle {
  padding-left: 5px;
}

.teamGenerator:hover .dropdown-menu {
    display: flex;
}

.dropdown-menu {
  margin-top: 0px;
}

label {
  margin-bottom: 0;
}

img {
  border: 0;
  max-width: 325px;
  max-height: 325px;
  width: auto;
  height: auto;
}

h2 {
  font-size: 1.5rem;
  font-weight: bold;
}

.effectivenessChart table td, .evolutions td {
  padding: 0;
}

.generatorPicture {
  padding: 10px;
}

.baseStatTable td, .evYieldTable td {
  padding-left: 10px;
  padding-bottom: 5px;
}

.baseStatTable th {
  font-size: 1rem !important;
}

.pokemonTables {
  padding: 0 1rem;
}

.pokemonTables th {
  width: 1px;
  white-space: nowrap;
}

.pokemonStats .statBar {
  border: 1px solid black;
}

.pokemonStats tr td:last-child {
  text-align: right;
}

.pokemonStats .statBar {
  height: 20px;
  min-width: 3px;
}

.tableWithHeaders thead th {
  width: auto;
  color: #212529;
  text-align: left;
  padding-left: 0px;
  white-space: nowrap;
  border-top-width: 0px;
}

.evolutions thead tr h2 {
  margin-top: -4px;
  margin-bottom: 4px;
}

.evolutions thead th:first-child, .evolutions tbody th:first-child {
  padding-right: 20px;
}

.evolutions thead th:first-of-type {
  min-width: 155px;
}

.evolutions tbody th {
  text-align: left;
}

.evolutions thead th:last-child {
  width: 100%;
}

.evolutions tbody th {
  font-size: 1rem;
}

.maleRatio {
  color: #3273dc;
}

.femaleRatio {
  color: #ff6bce;
}

.teamGenerator .generatorPicture {
  text-align: center;
}

.generatorButton {
  margin-bottom: 15px;
}

a {
  outline: none;
}

.typingSelectList {
  width: 200px;
}

.flexDiv {
  display: flex;
}

.primaryList {
  margin-right: 10px;
}

@media (min-width: 768px) {
  .search-bar {
    margin: 0;
  }
  .main {
    margin-top: 70px;
  }
}

